<resources>
    <string name="app_name">UI APP</string>
    <string name="historical_penisula_orienteering">Historical Penisula Orienteering</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">email</string>
    <string name="you_email_com">you@email.com</string>
    <string name="list_of_the_historical_artifacts">List of the historical Artifacts</string>
    <string name="ayasofya_mosque">Ayasofya Mosque</string>
    <string name="the_hagia_sophia_whose_name_means_holy_wisdom_is_a_domed_monument_originally_built_as_a_cathedral_in_constantinople_now_istanbul_turkey_in_the_sixth_century_a_d_it_contains_two_floors_centered_on_a_giant_nave_that_has_a_great_dome_ceiling_along_with_smaller_domes_towering_above_in_its_1_400_year_life_span_it_has_served_as_a_cathedral_mosque_and_now_a_museum_when_it_was_first_constructed_constantinople_was_the_capital_of_the_byzantine_empire_this_state_officially_christian_originally_formed_the_eastern_half_of_the_roman_empire_and_carried_on_after_the_fall_of_rome">The Hagia Sophia, whose name means “holy wisdom,” is a domed monument originally built as a cathedral in Constantinople (now Istanbul, Turkey) in the sixth century A.D. It contains two floors centered on a giant nave that has a great dome ceiling, along with smaller domes, towering above. In its 1,400 year life-span it has served as a cathedral, mosque and now a museum. When it was first constructed, Constantinople was the capital of the Byzantine Empire. This state, officially Christian, originally formed the eastern half of the Roman Empire and carried on after the fall of Rome.</string>
    <string name="title_activity_maps">Map</string>
    <string name="hagia_sophia_has_a_column_known_as_the_wishing_column_perspiring_column_or_sweating_column_that_is_damp_to_the_touch_it_is_located_on_the_northwest_portion_of_the_church_and_on_it_there_is_a_hole_in_which_people_jam_their_fingers_to_receive_healing_from_their_ailments_it_is_believed_that_it_has_the_blessing_of_st_gregory_who_appeared_near_it_thus_provides_healing_a_finger_that_emerges_wet_from_the_hole_is_believed_to_be_an_indication_of_the_fulfillment_of_one_s_wishes_and_the_provision_of_healing_protective_bronze_plates_put_over_the_hole_was_no_determent_to_pilgrims_who_still_found_a_way_to_access_the_hole_hagia_sophia_s_columns_were_from_the_temple_of_artemis_at_ephesus_which_is_one_of_the_seven_wonders_of_the_ancient_world_large_stones_were_acquired_from_egypt_while_a_black_stone_was_acquired_from_the_bosphorus_additionally_green_marble_and_yellow_stone_were_acquired_from_thesally_and_syria_respectively_all_these_materials_from_around_the_byzantine_empire_and_beyond_made_hagia_sophia_as_magnificent_as_it_is_the_features_of_the_hagia_sophia_as_described_are_splendid_and_a_visit_there_would_help_appreciate_their_individuality_as_well_as_their_coming_together_to_form_the_whole_conversion_of_the_church_to_mosque_then_museum_ensures_that_everything_is_available_for_viewing_it_is_feared_that_an_earthquake_might_bring_hagia_sophia_down_as_it_was_constructed_over_a_fault_line_the_museum_could_also_do_with_some_refurbishment_as_it_has_been_said_that_hagia_sophia_is_in_such_a_state_of_disrepair_it_desperately_needs_work">Hagia Sophia has a column known as the wishing column, perspiring column, or sweating column that is damp to the touch. It is located on the northwest portion of the church, and on it there is a hole in which people jam their fingers to receive healing from their ailments! It is believed that it has the blessing of St. Gregory who appeared near it, thus provides healing. A finger that emerges wet from the hole is believed to be an indication of the fulfillment of one’s wishes and the provision of healing. Protective bronze plates put over the hole was no determent to pilgrims who still found a way to access the hole. Hagia Sophia’s columns were from the Temple of Artemis at Ephesus which is one of the Seven Wonders of the Ancient World. Large stones were acquired from Egypt while a black stone was acquired from the Bosphorus. Additionally, green marble and yellow stone were acquired from Thesally and Syria respectively. All these materials from around the Byzantine Empire and beyond made Hagia Sophia as magnificent as it is. The features of the Hagia Sophia as described are splendid, and a visit there would help appreciate their individuality as well as their coming together to form the whole. Conversion of the church to mosque, then museum ensures that everything is available for viewing. It is feared that an earthquake might bring Hagia Sophia down as it was constructed over a fault line. The Museum could also do with some refurbishment as it has been said that Hagia Sophia is in such a state of disrepair it desperately needs work.</string>
    <string name="meryem_ana_church">Meryem Ana Church</string>
    <string name="a">a</string>
    <string name="the_church_proper_defined_by_all_the_sources_as_large_was_of_basilica_type_with_the_space_divided_into_three_aisles_by_two_colonnades_this_plan_is_similar_to_that_of_other_churches_of_the_early_type_in_constantinople_like_st_john_of_studios_it_had_a_rectangular_plan_with_sides_of_96_m_and_36_m_justinian_apparently_built_a_dome_on_the_church_since_procopius_in_his_work_de_edificiis_mentions_that_both_colonnades_bent_in_the_middle_of_the_nave_describing_a_semicircle_emperor_justin_ii_added_the_two_side_arms_giving_to_the_plan_the_appearance_of_a_cross_the_reconstruction_of_1070_possibly_respected_this_plan_the_spanish_ambassador_ruy_gonz_les_de_clavijo_who_visited_constantinople_in_1402_writes_that_the_building_was_divided_into_three_aisles_with_the_central_higher_than_the_flanking_ones_the_columns_were_made_of_green_jasper_while_the_capitals_and_the_bases_of_the_columns_were_gilded_and_carved_in_white_marble_the_church_by_that_time_had_no_dome_anymore_but_a_multicoloured_compartmented_ceiling_decorated_with_golden_garlands">The church proper, defined by all the sources as \'large\' , was of basilica type, with the space divided into three aisles by two colonnades. This plan is similar to that of other churches of the early type in Constantinople like St. John of Studios. It had a rectangular plan with sides of 96 m and 36 m. Justinian apparently built a dome on the church, since Procopius, in his work De Edificiis, mentions that both colonnades bent in the middle of the nave describing a semicircle. Emperor Justin II added the two side arms, giving to the plan the appearance of a cross.] The reconstruction of 1070 possibly respected this plan. The Spanish ambassador Ruy Gonzáles de Clavijo, who visited Constantinople in 1402, writes that the building was divided into three aisles, with the central higher than the flanking ones. The columns were made of green Jasper, while the capitals and the bases of the columns were gilded and carved in white marble. The church by that time had no dome anymore, but a multicoloured compartmented ceiling, decorated with golden garlands.</string>
</resources>