<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ilkSayfa">

    <TextView
        android:id="@+id/ListofhistoricalArtifacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/purple_200"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/list_of_the_historical_artifacts"
        android:textColor="@color/white"
        android:textSize="29sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/Ayasofyainfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:background="@color/teal_200"
        android:paddingVertical="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/ayasofya_mosque"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Meryemana"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:background="@color/teal_200"
        android:paddingVertical="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:text="@string/meryem_ana_church"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="right"
        android:layout_marginVertical="250dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_map_24"
        tools:ignore="RtlHardcoded"
        android:id="@+id/gmapsbutton"/>




</LinearLayout>