<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/purple_200"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/historical_penisula_orienteering"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        app:layout_constraintVertical_bias="0.503"
        tools:layout_editor_absoluteX="-113dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/transparentlocationmarker" />
            <Button
                android:id="@+id/signinbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/welcome"
                android:textColor="@color/purple_200"
                android:textSize="30sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                android:textColor="@color/teal_700"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="41dp"
                android:background="@color/white"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:text="@string/email"
                android:textAllCaps="true"
                android:textColor="@color/teal_700"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <LinearLayout
                    android:id="@+id/layoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="60dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_email"
                        app:tint="@color/purple_700" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@null"
                        android:hint="@string/you_email_com"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/teal_200"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>